<resources>
    <string name="app_name">GTRadio</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="radio_list_label">Stations</string>
    <string name="select">Select</string>
    <string name="previous">Previous</string>

    <string name="no_folder_selected">Please select a folder for your radio stations.</string>
    <!-- UPDATE THESE IN THE COMMON RES FILE AS WELL-->
    <string name="preference_file_key">com.sc.gtradio.preferences</string>
    <string name="radio_folders_uri_key">radio_folders_uri</string>
    <string name="ads_enabled_preference_key">ads_enabled</string>
    <string name="weather_chatter_enabled_preference_key">weather_chatter_enabled</string>
    <string name="news_reports_preference_key">news_reports_enabled</string>

    <!-- Activity Titles-->
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="library_header">Library</string>

    <!-- Messages Preferences -->
    <string name="music_path_title">Path to Library</string>
    <string name="playback_header">Playback</string>

    <string name="ads_enabled_title">Play Ads</string>
    <string name="ads_enabled_summary">Note: This setting only affects gen 2 and 3 stations.</string>

    <string name="weather_chatter_enabled_title">Play Weather-Specific DJ Chatter and Weather Reports</string>
    <string name="weather_chatter_summary">Note: The weather-specific DJ chatter and weather reports do not currently check active weather conditions.</string>

    <string name="news_reports_enabled_title">Play News Reports</string>
    <string name="news_reports_summary">Note: This setting only affects gen 3 stations.</string>

    <string name="nothing_playing">Nothing Playing</string>
    <string name="no_groups_available">No groups available. Double check the selected folder and your folder structure.</string>
    <string name="sad_face">Sad face</string>

</resources>